--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat|Raleway|Caveat">
 
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="header.css">
@@ -31,7 +32,7 @@
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            PRODUCTS
+                            PRODUCTS &nbsp;<i class="bi bi-chevron-down"></i>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             <li><a class="dropdown-item" href="#">Card manunfactre</a></li>
@@ -42,7 +43,7 @@
                             <li><a class="dropdown-item" href="#">In development</a></li>
                         </ul>
                     </li>
-                    </li class="nav-item">
+                    <li class="nav-item">
                         <a class="nav-link" href="#">ABOUT US</a>
                     </li>
                     <li class="nav-item">
@@ -57,8 +58,8 @@
             </div>
 
                 <span class="nav-item dropdown ms-auto">
-                    <a class="nav-link dropdown-toggle" href="#" id="langDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        ENG
+                    <a class="nav-link dropdown-toggle nav-gray" href="#" id="langDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                        ENG &nbsp;<i class="bi bi-chevron-down"></i>
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                         <li><a class="dropdown-item" href="#">ENG</a></li>
@@ -70,7 +71,7 @@
                     </ul>
                 </span>
             
-            <a class="nav-link" href="#"><i class="bi bi-search"></i></a>
+            <a class="nav-link nav-gray" href="#"><i class="bi bi-search"></i></a>
             
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent"
                 aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
