--- a/index.html
+++ b/index.html
@@ -52,11 +52,13 @@
                         <div class="dropdown-menu test-drop-menu" aria-labelledby="navbarDropdown">
                             <div class="white-dropdown p-3">
                                 <ul>
-                                    <li><a class="dropdown-item" href="#">Card manunfactre</a></li>
-                                    <li><a class="dropdown-item" href="#">Card services</a></li>
+                                    <li class="dropdown">
+                                        <a class="dropdown-item" id="orangenav1" data-bs-toggle="dropdown" href="#">Card manunfactre</a>
+                                    </li>
+                                    <li class=""><a class="dropdown-item" href="#">Card services</a></li>
                                 </ul>
                             </div>
-                            <div class="orange-dropdown p-3">
+                            <div class="dropdown-menu orange-dropdown p-3" aria-labelledby="orangenav1">
                                 <ul>
                                     <li><a class="dropdown-item" href="#">Casino cards</a></li>
                                     <li><a class="dropdown-item" href="#">Business cards</a></li>
