--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
                                         <a class="dropdown-item drop-toggle" id="orangenav1" href="#">Card manunfacture</a>
                                     </li>
                                     <li><a class="dropdown-item drop-toggle" id="orangenav2" href="#">Card services</a></li>
+                                    <li><a class="dropdown-item" href="#">Card extra</a></li></li>
                                 </ul>
                             </div>
                             <div class="orange-dropdown p-3" id="orangenav1" aria-labelledby="orangenav1">
@@ -73,7 +74,6 @@
                                     <li><a class="dropdown-item" href="#">Second Business cards</a></li>
                                     <li><a class="dropdown-item" href="#">Second Gift cards</a></li>
                                     <li><a class="dropdown-item" href="#">Second Loyalty cards</a></li>
-                                    <li><a class="dropdown-item" href="#">Second Non-standard cards</a></li>
                                 </ul>
                             </div>
                         </div>
