adding more entries

--- a/index.html
+++ b/index.html
@@ -29,34 +29,20 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="#">HOMEPAGE</a>
 
-                    <li class="nav-item dropdown" style="display:none">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-bs-toggle="dropdown" aria-expanded="false">
-                            PRODUCTS &nbsp;<i class="bi bi-chevron-down"></i>
-                        </a>
-                        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Card manunfactre</a></li>
-                            <li><a class="dropdown-item" href="#">Card services</a></li>
-                            <li>
-                                <hr class="dropdown-divider">
-                            </li>
-                            <li><a class="dropdown-item" href="#">In development</a></li>
-                        </ul>
-                    </li>
-
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown1" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
                             PRODUCTS
                         </a>
-                        <div class="dropdown-menu flex-drop" id="nav-products" aria-labelledby="navbarDropdown">
+                        <div class="dropdown-menu flex-drop nav-products" aria-labelledby="navbarDropdown1">
                             <div class="white-dropdown p-3">
                                 <ul>
                                     <li>
                                         <a class="dropdown-item drop-toggle" id="orangenav1" href="#">Card manunfacture</a>
                                     </li>
+                                    <li><a class="dropdown-item no-drop" href="#">Card extra</a></li></li>
                                     <li><a class="dropdown-item drop-toggle" id="orangenav2" href="#">Card services</a></li>
-                                    <li><a class="dropdown-item" href="#">Card extra</a></li></li>
+                                    <li><a class="dropdown-item no-drop" href="#">Card extra</a></li></li>
                                 </ul>
                             </div>
                             <div class="orange-dropdown p-3" id="orangenav1" aria-labelledby="orangenav1">
@@ -82,9 +68,45 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">CAREER</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">ABOUT US</a>
+
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown2" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            ABOUT US
+                        </a>
+                        <div class="dropdown-menu flex-drop nav-products" aria-labelledby="navbarDropdown2">
+                            <div class="white-dropdown p-3">
+                                <ul>
+                                    <li>
+                                        <a class="dropdown-item drop-toggle" id="orangenav3" href="#">O nama</a>
+                                    </li>
+                                    <li><a class="dropdown-item no-drop" href="#">Istorija</a></li></li>
+                                    <li><a class="dropdown-item drop-toggle" id="orangenav4" href="#">Timovi</a></li>
+                                    <li><a class="dropdown-item no-drop" href="#">Podrška</a></li></li>
+                                </ul>
+                            </div>
+                            <div class="orange-dropdown p-3" id="orangenav3" aria-labelledby="orangenav3">
+                                <ul>
+                                    <li><a class="dropdown-item" href="#">Lorem</a></li>
+                                    <li><a class="dropdown-item" href="#">Ipsum</a></li>
+                                    <li><a class="dropdown-item" href="#">Dolor sit</a></li>
+                                    <li><a class="dropdown-item" href="#">Lorem Ipsum</a></li>
+                                    <li><a class="dropdown-item" href="#">Ipsum dolor</a></li>
+                                </ul>
+                            </div>
+                            <div class="orange-dropdown p-3" id="orangenav4" aria-labelledby="orangenav4">
+                                <ul>
+                                    <li><a class="dropdown-item" href="#">Second Lorem Ipsum</a></li>
+                                    <li><a class="dropdown-item" href="#">Second Dolor sit</a></li>
+                                    <li><a class="dropdown-item" href="#">Second Test test</a></li>
+                                    <li><a class="dropdown-item" href="#">Loyalty cards</a></li>
+                                </ul>
+                            </div>
+                        </div>
                     </li>
+
+
+
                     <li class="nav-item">
                         <a class="nav-link" href="#">BLOG</a>
                     </li>
