--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
                             <div class="white-dropdown p-3">
                                 <ul>
                                     <li>
-                                        <a class="dropdown-item drop-toggle" id="orangenav1" href="#">Card manunfacture</a>
+                                        <a class="dropdown-item drop-toggle" id="orangenav1" href="#">Card manunfacture<i class="bi bi-caret-right"></i></a>
                                     </li>
                                     <li><a class="dropdown-item no-drop" href="#">Card extra</a></li></li>
-                                    <li><a class="dropdown-item drop-toggle" id="orangenav2" href="#">Card services</a></li>
+                                    <li><a class="dropdown-item drop-toggle" id="orangenav2" href="#">Card services<i class="bi bi-caret-right"></i></a></li>
                                     <li><a class="dropdown-item no-drop" href="#">Card extra</a></li></li>
                                 </ul>
                             </div>
@@ -78,10 +78,10 @@
                             <div class="white-dropdown p-3">
                                 <ul>
                                     <li>
-                                        <a class="dropdown-item drop-toggle" id="orangenav3" href="#">O nama</a>
+                                        <a class="dropdown-item drop-toggle" id="orangenav3" href="#">O nama <i class="bi bi-caret-right"></i></a>
                                     </li>
                                     <li><a class="dropdown-item no-drop" href="#">Istorija</a></li></li>
-                                    <li><a class="dropdown-item drop-toggle" id="orangenav4" href="#">Timovi</a></li>
+                                    <li><a class="dropdown-item drop-toggle" id="orangenav4" href="#">Timovi <i class="bi bi-caret-right"></i></a></li>
                                     <li><a class="dropdown-item no-drop" href="#">Podrška</a></li></li>
                                 </ul>
                             </div>
