--- a/mob-header/mob-header.html
+++ b/mob-header/mob-header.html
@@ -21,154 +21,179 @@
 <body>
 
 
-    <div id="mobHeader" class="sidenav">
 
-
+    <div id="mobHeader" class="sidenav .d-md-none">
         <!-- Closes sidenav -->
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
 
+        <div class="d-flex flex-column sidemin100">
+            <ul class="nav flex-column flex-nowrap overflow-hidden sideNavBotKeep">
+                <li class="nav-item">
+                    <a class="nav-link text-truncate side-lv1" href="#">POČETNA</a>
+                </li>
 
-        <!-- TODO Overflow hidden? -->
-        <ul class="nav flex-column flex-nowrap overflow-hidden ">
-            <li class="nav-item">
-                <a class="nav-link text-truncate side-lv1" href="#">POČETNA</a>
-            </li>
+                <li class="nav-item">
+                    <!-- <a class="nav-link text-truncate" href="#"><span class="d-sm-inline">PROIZVODI</span></a> -->
 
-            <li class="nav-item">
-                <!-- <a class="nav-link text-truncate" href="#"><span class="d-sm-inline">PROIZVODI</span></a> -->
+                    <div class="d-flex">
+                        <a class="nav-link text-truncate side-lv1" href="#">
+                            PROIZVODI
+                        </a>
+
+                        <button class="sideBtn" type="button" data-bs-toggle="collapse" data-bs-target="#sideMenu2"
+                            aria-expanded="false" aria-controls="sideMenu2">
+                            <span class="sideArrowUp"><i class="bi bi-chevron-up"></i></span>
+                            <span class="sideArrowDown"><i class="bi bi-chevron-right"></i></span>
+                        </button>
+
+                    </div>
+
+                    <div class="collapse" id="sideMenu2" aria-expanded="false">
+                        <ul class="flex-column ps-2 nav">
+                            <li class="nav-item"><a class="nav-link py-1 side-lv2" href="#">Orders</a></li>
+                            <li class="nav-item"><a class="nav-link py-1 side-lv2" href="#">Not Orders</a></li>
+                            <li class="nav-item"><a class="nav-link py-1 side-lv2" href="#">Unorders</a></li>
+                        </ul>
+                    </div>
+                </li>
+
+                <li class="nav-item">
+
+                    <div class="d-flex">
+                        <a class="nav-link text-truncate side-lv1" href="#">
+                            KARIJERA
+                        </a>
+
+                        <button class="sideBtn" type="button" data-bs-toggle="collapse" data-bs-target="#sideMenu3"
+                            aria-expanded="false" aria-controls="sideMenu3">
+                            <span class="sideArrowUp"><i class="bi bi-chevron-up"></i></span>
+                            <span class="sideArrowDown"><i class="bi bi-chevron-right"></i></span>
+                        </button>
+                    </div>
+
+                    <div class="collapse" id="sideMenu3" aria-expanded="false">
+                        <ul class="flex-column ps-2 nav">
+                            <li class="nav-item">
+
+                                <div class="d-flex">
+                                    <a class="nav-link text-truncate side-lv2" href="#">
+                                        Customers
+                                    </a>
+
+                                    <button class="sideBtn" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#sideSubMenu3sub1" aria-expanded="false"
+                                        aria-controls="sideSubMenu3sub1">
+                                        <span class="sideArrowUp"><i class="bi bi-chevron-up"></i></span>
+                                        <span class="sideArrowDown"><i class="bi bi-chevron-right"></i></span>
+                                    </button>
+                                </div>
+
+
+                                <div class="collapse" id="sideSubMenu3sub1" aria-expanded="false">
+                                    <ul class="flex-column nav ps-4">
+                                        <li class="nav-item">
+                                            <a class="nav-link p-1 text-truncate side-lv3" href="#"> Daily </a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link p-1 side-lv3 text-truncate" href="#"> Dashboard </a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link p-1 side-lv3 text-truncate" href="#">Charts </a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link p-1 side-lv3 text-truncate" href="#">
+                                                <i class="fa fa-fw fa-compass"></i> Areas </a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </li>
+
+                            <li class="nav-item">
+
+                                <div class="d-flex">
+                                    <a class="nav-link text-truncate side-lv2" href="#">
+                                        Employees
+                                    </a>
+
+                                    <button class="sideBtn" type="button" data-bs-toggle="collapse"
+                                        data-bs-target="#sideSubMenu3sub2" aria-expanded="false"
+                                        aria-controls="sideSubMenu3sub2">
+                                        <span class="sideArrowUp"><i class="bi bi-chevron-up"></i></span>
+                                        <span class="sideArrowDown"><i class="bi bi-chevron-right"></i></span>
+                                    </button>
+                                </div>
+
+
+                                <div class="collapse" id="sideSubMenu3sub2" aria-expanded="false">
+                                    <ul class="flex-column nav ps-4">
+                                        <li class="nav-item">
+                                            <a class="nav-link p-1 text-truncate side-lv3" href="#">Daily</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link p-1 text-truncate side-lv3" href="#">Dashboard</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link p-1 text-truncate side-lv3" href="#">Charts</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link p-1 text-truncate side-lv3" href="#">Areas</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </li>
+
+
+                            <li class="nav-item"><a class="nav-link py-1 side-lv2" href="#">Not Orders</a></li>
+                            <li class="nav-item"><a class="nav-link py-1 side-lv2" href="#">Unorders</a></li>
+                        </ul>
+                    </div>
+
+
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link text-truncate side-lv1" href="#"><span class="d-sm-inline">O
+                            NAMA</span></a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link text-truncate side-lv1" href="#"><span class="d-sm-inline">BLOG</span></a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link text-truncate side-lv1" href="#"><span class="d-sm-inline">KONTAKT</span></a>
+                </li>
+
+
+
+
+            </ul>
+
+            <div class="sideNavBot">
 
                 <div class="d-flex">
                     <a class="nav-link text-truncate side-lv1" href="#">
-                        PROIZVODI
+                        Internacionalni website
                     </a>
 
-                    <button class="sideBtn" type="button" data-bs-toggle="collapse" data-bs-target="#sideMenu2"
-                        aria-expanded="false" aria-controls="sideMenu2">
+                    <button class="sideBtn" type="button" data-bs-toggle="collapse" data-bs-target="#sideMenuLang"
+                        aria-expanded="false" aria-controls="sideMenuLang">
                         <span class="sideArrowUp"><i class="bi bi-chevron-up"></i></span>
-                        <span class="sideArrowDown"><i class="bi bi-chevron-down"></i></span>
+                        <span class="sideArrowDown"><i class="bi bi-chevron-right"></i></span>
                     </button>
 
                 </div>
-
-                <div class="collapse" id="sideMenu2" aria-expanded="false">
+                <div class="collapse" id="sideMenuLang" aria-expanded="false">
                     <ul class="flex-column ps-2 nav">
-                        <li class="nav-item"><a class="nav-link py-1 side-lv2" href="#">Orders</a></li>
-                        <li class="nav-item"><a class="nav-link py-1 side-lv2" href="#">Not Orders</a></li>
-                        <li class="nav-item"><a class="nav-link py-1 side-lv2" href="#">Unorders</a></li>
-                    </ul>
-                </div>
-            </li>
-
-            <li class="nav-item">
-
-                <div class="d-flex">
-                    <a class="nav-link text-truncate side-lv1" href="#">
-                        KARIJERA
-                    </a>
-
-                    <button class="sideBtn" type="button" data-bs-toggle="collapse" data-bs-target="#sideMenu3"
-                        aria-expanded="false" aria-controls="sideMenu3">
-                        <span class="sideArrowUp"><i class="bi bi-chevron-up"></i></span>
-                        <span class="sideArrowDown"><i class="bi bi-chevron-down"></i></span>
-                    </button>
-                </div>
-
-                <div class="collapse" id="sideMenu3" aria-expanded="false">
-                    <ul class="flex-column ps-2 nav">
-                        <li class="nav-item">
-
-                            <div class="d-flex">
-                                <a class="nav-link text-truncate side-lv2" href="#">
-                                    Customers
-                                </a>
-
-                                <button class="sideBtn" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#sideSubMenu3sub1" aria-expanded="false"
-                                    aria-controls="sideSubMenu3sub1">
-                                    <span class="sideArrowUp"><i class="bi bi-chevron-up"></i></span>
-                                    <span class="sideArrowDown"><i class="bi bi-chevron-down"></i></span>
-                                </button>
-                            </div>
-
-
-                            <div class="collapse" id="sideSubMenu3sub1" aria-expanded="false">
-                                <ul class="flex-column nav ps-4">
-                                    <li class="nav-item">
-                                        <a class="nav-link p-1 text-truncate side-lv3" href="#"> Daily </a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link p-1 side-lv3 text-truncate" href="#"> Dashboard </a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link p-1 side-lv3 text-truncate" href="#">Charts </a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link p-1 side-lv3 text-truncate" href="#">
-                                            <i class="fa fa-fw fa-compass"></i> Areas </a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-
-                        <li class="nav-item">
-
-                            <div class="d-flex">
-                                <a class="nav-link text-truncate side-lv2" href="#">
-                                    Employees
-                                </a>
-
-                                <button class="sideBtn" type="button" data-bs-toggle="collapse"
-                                    data-bs-target="#sideSubMenu3sub2" aria-expanded="false"
-                                    aria-controls="sideSubMenu3sub2">
-                                    <span class="sideArrowUp"><i class="bi bi-chevron-up"></i></span>
-                                    <span class="sideArrowDown"><i class="bi bi-chevron-down"></i></span>
-                                </button>
-                            </div>
-
-
-                            <div class="collapse" id="sideSubMenu3sub2" aria-expanded="false">
-                                <ul class="flex-column nav ps-4">
-                                    <li class="nav-item">
-                                        <a class="nav-link p-1 text-truncate side-lv3" href="#">Daily</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link p-1 text-truncate side-lv3" href="#">Dashboard</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link p-1 text-truncate side-lv3" href="#">Charts</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link p-1 text-truncate side-lv3" href="#">Areas</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </li>
-
-
-                        <li class="nav-item"><a class="nav-link py-1 side-lv2" href="#">Not Orders</a></li>
-                        <li class="nav-item"><a class="nav-link py-1 side-lv2" href="#">Unorders</a></li>
+                        <li class="nav-item"><a class="nav-link py-1 side-lv2" href="#">ENG</a></li>
+                        <li class="nav-item"><a class="nav-link py-1 side-lv2" href="#">SRB</a></li>
+                        <li class="nav-item"><a class="nav-link py-1 side-lv2" href="#">Other</a></li>
                     </ul>
                 </div>
 
+            </div>
 
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link text-truncate side-lv1" href="#"><span class="d-sm-inline">O
-                        NAMA</span></a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link text-truncate side-lv1" href="#"><span class="d-sm-inline">BLOG</span></a>
-            </li>
-
-            <li class="nav-item">
-                <a class="nav-link text-truncate side-lv1" href="#"><span class="d-sm-inline">KONTAKT</span></a>
-            </li>
-
-        </ul>
-
-
+        </div>
     </div>
 
     <!-- Use any element to open the sidenav -->
