--- a/8/index.html
+++ b/8/index.html
@@ -19,48 +19,55 @@
 
 <body>
 
-    <div>
-        <ul class="nav nav-pills">
-            <li class="active nav-item">
-                <a data-bs-toggle="pill" href="#home">Home</a>
-            </li>
-            <li class="nav-item">
-                <a data-bs-toggle="pill" href="#menu1">Menu 1</a>
-            </li>
-            <li class="nav-item">
-                <a data-bs-toggle="pill" href="#menu2">Menu 2</a>
-            </li>
-        </ul>
+    <div class="align-items-start">
 
-        <div class="tab-content">
-            <div id="home" class="tab-pane fade in active show">
-                <h3>HOME</h3>
-                <p>Some content.</p>
+        <div class="tab-content" id="v-pills-tabContent">
+            <div class="tab-pane fade show active" id="v-pills-1" role="tabpanel" aria-labelledby="v-pills-tab-1">
+                <img class='img-tab-8' src='https://via.placeholder.com/800/C33'>
             </div>
-            <div id="menu1" class="tab-pane fade">
-                <h3>Menu 1</h3>
-                <p>Some content in menu 1.</p>
+            <div class="tab-pane fade" id="v-pills-2" role="tabpanel" aria-labelledby="v-pills-tab-2">
+                <img class='img-tab-8' src='https://via.placeholder.com/800/5D2'>
             </div>
-            <div id="menu2" class="tab-pane fade">
-                <h3>Menu 2</h3>
-                <p>Some content in menu 2.</p>
+            <div class="tab-pane fade" id="v-pills-3" role="tabpanel" aria-labelledby="v-pills-tab-3">
+                <img class='img-tab-8' src='https://via.placeholder.com/800/25D'>
+            </div>
+            <div class="tab-pane fade" id="v-pills-4" role="tabpanel" aria-labelledby="v-pills-tab-4">
+                <img class='img-tab-8' src='https://via.placeholder.com/800/588'>
             </div>
         </div>
 
-        <ul class="nav nav-pills">
-            <li class="active nav-item">
-                <a data-bs-toggle="pill" href="#home">Home</a>
-            </li>
-            <li class="nav-item">
-                <a data-bs-toggle="pill" href="#menu1">Menu 1</a>
-            </li>
-            <li class="nav-item">
-                <a data-bs-toggle="pill" href="#menu2">Menu 2</a>
-            </li>
-        </ul>
+        <div class='d-flex flex-wrap justify-content-center' id="v-pills-img">
+            <div class='img-div-8'><img class='img-a-8' src='https://via.placeholder.com/800/C33'></div>
+            <div class='img-div-8'><img class='img-a-8' src='https://via.placeholder.com/800/5D2'></div>
+            <div class='img-div-8'><img class='img-a-8' src='https://via.placeholder.com/800/25D'></div>
+            <div class='img-div-8'><img class='img-a-8' src='https://via.placeholder.com/800/588'></div>
+        </div>
+
+        <div class="nav flex-column nav-pills text-start pills-8" id="v-pills-tab" role="tablist"
+            aria-orientation="vertical">
+            <button class="nav-link active" id="v-pills-tab-1" data-bs-toggle="pill" data-bs-target="#v-pills-1"
+                type="button" role="tab" aria-controls="v-pills-1" aria-selected="true">
+                <img class='img-button-8' src='https://via.placeholder.com/150'>
+                <span>Home</span>
+            </button>
+            <button class="nav-link" id="v-pills-tab-2" data-bs-toggle="pill" data-bs-target="#v-pills-2"
+                type="button" role="tab" aria-controls="v-pills-2" aria-selected="false">
+                <img class='img-button-8' src='https://via.placeholder.com/150'>
+                Profile
+            </button>
+            <button class="nav-link" id="v-pills-tab-3" data-bs-toggle="pill" data-bs-target="#v-pills-3"
+                type="button" role="tab" aria-controls="v-pills-3" aria-selected="false">
+                <img class='img-button-8' src='https://via.placeholder.com/150'>
+                Messages
+            </button>
+            <button class="nav-link" id="v-pills-tab-4" data-bs-toggle="pill" data-bs-target="#v-pills-4"
+                type="button" role="tab" aria-controls="v-pills-4" aria-selected="false">
+                <img class='img-button-8' src='https://via.placeholder.com/150'>
+                Settings
+            </button>
+        </div>
 
     </div>
-
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"
@@ -68,7 +75,7 @@
         crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-
+    <script src='script.js'></script>
 </body>
 
 </html>
